[project]
name = "project-nexus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.12.1",
    "deepagents>=0.4.12",
    "fastapi>=0.135.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "python-telegram-bot>=22.7",
    "telegram>=0.0.1",
    "uvicorn[standard]>=0.43.0",
]
